--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
         {
             "src": "result-management/main.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "50mb"
+            }
         }
     ],
     "routes": [
@@ -15,5 +18,6 @@
             "src": "/(.*)",
             "dest": "result-management/main.py"
         }
-    ]
+    ],
+    "outputDirectory": "result-management"
 }
