--- a/vercel.json
+++ b/vercel.json
@@ -3,33 +3,13 @@
     "builds": [
         {
             "src": "result-management/main.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "50mb"
-            }
-        },
-        {
-            "src": "result-management/static/**",
-            "use": "@vercel/static"
+            "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "src": "/static/css/(.*)",
-            "dest": "result-management/static/css/$1"
-        },
-        {
-            "src": "/static/js/(.*)",
-            "dest": "result-management/static/js/$1"
-        },
-        {
-            "src": "/static/(.*)",
-            "dest": "result-management/static/$1"
-        },
-        {
             "src": "/(.*)",
             "dest": "result-management/main.py"
         }
-    ],
-    "outputDirectory": "result-management"
+    ]
 }
