--- a/result-management/requirements.txt
+++ b/result-management/requirements.txt
@@ -1,6 +1,4 @@
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
+uvicorn==0.27.0
 jinja2==3.1.3
-aiofiles==23.2.1
 python-multipart==0.0.6
