--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,17 @@
         {
             "src": "result-management/main.py",
             "use": "@vercel/python"
+        },
+        {
+            "src": "result-management/static/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "result-management/static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "result-management/main.py"
