--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "result-management/main.py",
-            "use": "@vercel/python"
-        },
-        {
-            "src": "result-management/static/**",
-            "use": "@vercel/static"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "result-management/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "result-management/main.py"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "api/index.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "api/index.py"
+    }
+  ]
 }
